--- a/templates/morning.html
+++ b/templates/morning.html
@@ -33,7 +33,7 @@
                     <div class="input-group shadow-sm">
                         <span class="input-group-text bg-white border-end-0"><i class="fa-solid fa-user text-muted"></i></span>
                         <select name="employee_id" id="employee_id" class="form-select border-start-0 ps-0" required>
-                            <option value="">-- Choose Staff --</option>
+                            <option value="">-- Choose Employee --</option>
                             {% for emp in employees %}
                             <option value="{{ emp.id }}">{{ emp.name }}</option>
                             {% endfor %}
@@ -56,7 +56,7 @@
                 <table class="table table-hover align-middle mb-0" id="productTable">
                     <thead class="bg-light text-secondary small text-uppercase">
                         <tr>
-                            <th class="ps-3" style="width: 50px;">#</th>
+                            <th class="ps-3" style="width: 50px;">No</th>
                             <th style="min-width: 250px;">Product Name</th>
                             <th style="width: 100px;">Opening</th>
                             <th style="width: 120px;">Given</th>
@@ -134,3 +134,4 @@
 
 <script src="{{ url_for('static', filename='js/morning.js') }}"></script>
 {% endblock %}
+
