--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -140,6 +140,6 @@
     </form>
 </div>
 
-<script src="/static/js/pincode.js"></script>
+<script src="/static/js/pin.js"></script>
 
 {% endblock %}
