--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -34,8 +34,8 @@
 
             <div class="col-md-4">
                 <label class="form-label">Join Date</label>
-                <!-- maps to join_date; if empty DB default curdate() is used -->
-                <input type="date" name="joining_date" class="form-control">
+                <!-- maps to column join_date -->
+                <input type="date" name="join_date" class="form-control">
             </div>
 
             <div class="col-md-4">
@@ -63,9 +63,9 @@
             </div>
 
             <div class="col-md-4">
-                <label class="form-label">Alternative Joining Date</label>
-                <!-- maps to joining_date (optional) -->
-                <input type="date" name="joining_date" class="form-control">
+                <!-- optional free-text position label, mapped to employees.position -->
+                <label class="form-label">Position Title (optional text)</label>
+                <input type="text" name="position" class="form-control">
             </div>
         </div>
 
@@ -123,7 +123,7 @@
             </div>
 
             <div class="col-md-6">
-                <label class="form-label">Position</label>
+                <label class="form-label">Position (Master)</label>
                 <select name="position_id" class="form-control">
                     <option value="">Select Position</option>
                     {% for p in positions %}
@@ -151,6 +151,6 @@
 </div>
 
 <!-- client-side pincode script -->
-<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pincode.js') }}"></script>
 
 {% endblock %}
