--- a/templates/employees/employee_master.html
+++ b/templates/employees/employee_master.html
@@ -85,4 +85,6 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/emp.js') }}"></script>
+<script src="{{ url_for('static', filename='js/pincode.js') }}"></script>
 {% endblock %}
+
